tests/test120.rael.exp
720
Error [tests/test120.rael:3:9]: factorial expects positive numbers
|         blame "factorial expects positive numbers"
|         ^
